[metadata]
name = ambient
description = A package for building engineering physics
long_description = file: README.md, LICENSE
keywords = building engineering physics, psychrometrics
license = Apache License, Version 2
classifiers =
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
