[metadata]
name = ambient
description = A package for building engineering physics
long_description = file:README.rst
long_description_content_type = text/x-rst
keywords = building engineering physics, psychrometrics
license = Apache License, Version 2
classifiers =
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
    plotly

[options.extras_require]
docs = sphinx>2.0.0

[pycodestyle]
# E203: Whitespace before ':'
# W503: Line break before binary operator
max-line-length = 88
ignore=E203,W503

[pydocstyle]
# D413: Missing blank line after last section
add_ignore = D413
convention = google

[pylint.MASTER]
disable = C0330, W0511

[pylint.DESIGN]
# Maximum number of arguments for function / method.
max-args=10

# Minimum number of public methods for a class (see R0903).
min-public-methods=1

# Maximum number of instance attributes
max-attributes=12
